# magnum-bootstrap-android

./: .gitignore  README.md  build.gradle  gradleLog.txt
gradle/wrapper/: gradle-wrapper.properties
libraries/include/Corrade/: configure.h
libraries/include/Magnum/: configure.h
libraries/include/Magnum/ImGuiIntegration/: configure.h
src/: CMakeLists.txt  MyApplication.cpp  SampleTextureShader.cpp  SampleTextureShader.h  VertexColorShader.cpp  VertexColorShader.h  util.h
src/resources/: resources.conf  sample_texture.frag  sample_texture.vert  vertex_color.frag  vertex_color.vert
